finished problem 2, still need to solve for coefficients for problem 1.

--- a/CEG_7580/projects/project1/report_files/report_content/content.tex
+++ b/CEG_7580/projects/project1/report_files/report_content/content.tex
@@ -2,7 +2,30 @@
 
 \begin{document}
 
-\noindent CEG 7580: Project 1 \hfill Ryan Arnold \hfill September. 07, 2021
+% titlepage 
+
+
+\begin{titlepage}
+\begin{Large}
+\begin{center} 
+\textbf{Image Processing Fundamentals} \\
+\end{center}
+\end{Large}
+Project 1\\
+CEG 7580\\
+Ryan Arnold \\
+Date Due: 09/07/21 \\
+Date submitted: 09/06/21
+\vspace{24pt}
+%\end{center}
+
+\noindent Declaration Statement: 
+
+\noindent I hereby declare that this Report and the Matlab codes were written/prepared entirely by me based on my own work, and I have not used any material from another Project at another department/ university/college anywhere else, including Wright State. I also declare that I did not seek or receive assistance from any other person and I did not help any other person to prepare their reports or code.  The report mentions explicitly all sources of information in the reference list. I am aware of the fact that violation of these clauses is regarded as cheating and can result in invalidation of the paper with zero grade. Cheating or attempted cheating or assistance in cheating is reportable to the appropriate authority and may result in the expulsion of the student, in accordance with the University and College Policies.
+
+\end{titlepage}
+
+\clearpage
 
 \section*{Part 1 Results}
 
