finished this lovely project at 1 am baby. Time for bed ...

--- a/CEG_7580/projects/project3/report/rarnold_report3.tex
+++ b/CEG_7580/projects/project3/report/rarnold_report3.tex
@@ -24,6 +24,7 @@
 \usepackage{subfiles}
 \usepackage{enumerate}
 \usepackage{indentfirst}
+\usepackage{relsize}
 %package to stop hyphenating after wrapping
 %\usepackage[none]{hyphenat}
 \tolerance=1
